final test with multi params

--- a/handful-of-trials/scripts/config.json
+++ b/handful-of-trials/scripts/config.json
@@ -1,10 +1,18 @@
 [
 {
     "exp":"mbexp.py",
-    "prefix": "Ant",
+    "prefix": "PE_CEM",
     "result_dir":"log",
     "walltime": "1:00", 
     "args": "",
     "replicates": 2
+},
+  {
+    "exp":"mbexp.py",
+    "prefix": "D_Random",
+    "result_dir":"log",
+    "walltime": "1:00",
+    "args": "-ca model-type D -ca prop-type E -ca opt-type Random",
+    "replicates": 3
 }
 ]
