--- a/handful-of-trials/scripts/config.json
+++ b/handful-of-trials/scripts/config.json
@@ -1,17 +1,17 @@
 [
   {
     "exp":"mbexp.py",
-    "prefix": "D_Random",
+    "prefix": "D_Random_full",
     "result_dir":"log",
-    "walltime": "1:00",
+    "walltime": "2:00",
     "args": "-ca model-type D -ca prop-type E -ca opt-type Random ",
     "replicates": 5
   },
   {
     "exp":"mbexp.py",
-    "prefix": "D_CEM",
+    "prefix": "D_CEM_full",
     "result_dir":"log",
-    "walltime": "1:00",
+    "walltime": "2:00",
     "args": "-ca model-type D -ca prop-type E ",
     "replicates": 5
   }
