--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -5,6 +5,14 @@
     "result_dir":"exp/log",
     "walltime": "1:00",
     "args": "-c horizon 10",
-    "replicates": 1
+    "replicates": 3
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_30H",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 30",
+    "replicates": 3
   }
 ]
