--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,18 +1,26 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_10H",
+    "prefix": "minitaur_5H",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 10",
+    "args": "-c horizon 5",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_30H",
+    "prefix": "minitaur_15H",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 30",
+    "args": "-c horizon 5",
+    "replicates": 3
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_20H",
+    "result_dir":"exp/log",
+    "walltime": "12:00",
+    "args": "-c horizon 20",
     "replicates": 3
   },
     {
@@ -20,7 +28,7 @@
     "prefix": "minitaur_survival",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c survival_weight 1",
+    "args": "-c survival_weight 10",
     "replicates": 3
   },
       {
@@ -28,7 +36,7 @@
     "prefix": "minitaur_energy",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c energy_weight 0.0005",
+    "args": "-c energy_weight 0.0001",
     "replicates": 3
   },
     {
@@ -36,7 +44,7 @@
     "prefix": "minitaur_all",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c survival_weight 0.1 energy_weight 0.0005 shake_weight 0.1 drift_weight 0.1",
+    "args": "-c survival_weight 0.1 -c energy_weight 0.0001 -c shake_weight 0.1 -c drift_weight 0.1",
     "replicates": 3
   }
 ]
