--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -4,47 +4,39 @@
     "prefix": "minitaur_5H",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 5",
+    "args": "-c horizon 5 -c survival_weight 10",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_15H",
+    "prefix": "minitaur_15H_xonly",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 5",
+    "args": "-c horizon 15",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_20H",
+    "prefix": "minitaur_10H",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 20",
+    "args": "-c horizon 10 -c survival_weight 10",
+    "replicates": 3
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_15H",
+    "result_dir":"exp/log",
+    "walltime": "12:00",
+    "args": "-c horizon 15 -c survival_weight 10",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_survival",
+    "prefix": "minitaur_30H",
     "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c survival_weight 10",
-    "replicates": 3
-  },
-      {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_energy",
-    "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c energy_weight 0.0001",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_all",
-    "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c survival_weight 0.1 -c energy_weight 0.0001 -c shake_weight 0.1 -c drift_weight 0.1",
+    "walltime": "14:00",
+    "args": "-c horizon 30 -c survival_weight 10",
     "replicates": 3
   }
 ]
