--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,42 +1,34 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_5H",
+    "prefix": "minitaur_100MVL",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 5 -c survival_weight 10",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_15H_xonly",
-    "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 15",
+    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 100",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_10H",
+    "prefix": "minitaur_150MVL",
     "result_dir":"exp/log",
     "walltime": "12:00",
-    "args": "-c horizon 10 -c survival_weight 10",
-    "replicates": 3
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_15H",
-    "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 15 -c survival_weight 10",
+    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 150",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_30H",
+    "prefix": "minitaur_200MVL",
     "result_dir":"exp/log",
-    "walltime": "14:00",
-    "args": "-c horizon 30 -c survival_weight 10",
+    "walltime": "12:00",
+    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 200",
+    "replicates": 3
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_300MVL",
+    "result_dir":"exp/log",
+    "walltime": "12:00",
+    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 300",
     "replicates": 3
   }
 ]
