--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,42 +1,42 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_125MVL",
+    "prefix": "minitaur_5K",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 125",
+    "args": "-c horizon 20 -c K 5 -c motor_velocity_limit 150",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_175MVL",
+    "prefix": "minitaur_10K",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c survival_weight 10 -c motor_velocity_limit 175",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c K 10",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_150MVL_xonly",
+    "prefix": "minitaur_20K",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c -c motor_velocity_limit 150",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c K 20",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_150MVL_H10",
+    "prefix": "minitaur_0.33alpha",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 10 -c survival_weight 10 -c motor_velocity_limit 150",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c alpha 0.33",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_150MVL_H30",
+    "prefix": "minitaur_0.5alpha",
     "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 30 -c survival_weight 10 -c motor_velocity_limit 150",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c alpha 0.5",
     "replicates": 3
   }
 ]
