--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -25,18 +25,18 @@
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.33alpha",
+    "prefix": "minitaur_0.33angle_limit",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c alpha 0.33",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.33",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.5alpha",
+    "prefix": "minitaur_0.5angle_limit",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c alpha 0.5",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5",
     "replicates": 3
   }
 ]
