--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,42 +1,34 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_5K",
+    "prefix": "minitaur_0.5AL_H10",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c K 5 -c motor_velocity_limit 150",
-    "replicates": 3
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_10K",
-    "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c K 10",
+    "args": "-c horizon 10 -c motor_velocity_limit 150 -c angle_limit 0.5",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_20K",
+    "prefix": "minitaur_0.5AL_H15",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c K 20",
+    "args": "-c horizon 15 -c motor_velocity_limit 150 -c angle_limit 0.5",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.33angle_limit",
+    "prefix": "minitaur_0.5AL_H30",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.33",
+    "args": "-c horizon 30 -c motor_velocity_limit 150 -c angle_limit 0.5",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.5angle_limit",
+    "prefix": "minitaur_survival10",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c survival_weight 10",
     "replicates": 3
   }
 ]
