--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,34 +1,34 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.5AL_H10",
+    "prefix": "minitaur_LS100",
     "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 10 -c motor_velocity_limit 150 -c angle_limit 0.5",
+    "walltime": "12:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 100",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.5AL_H15",
+    "prefix": "minitaur_LS400",
     "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 15 -c motor_velocity_limit 150 -c angle_limit 0.5",
+    "walltime": "12:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 400",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_0.5AL_H30",
+    "prefix": "minitaur_LS800",
     "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 30 -c motor_velocity_limit 150 -c angle_limit 0.5",
+    "walltime": "12:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 800",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_survival10",
+    "prefix": "minitaur_LS400_H50",
     "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c survival_weight 10",
+    "walltime": "12:00",
+    "args": "-c horizon 50 -c motor_velocity_limit 150 -c angle_limit 0.5 -c -c ensemble_hidden 400",
     "replicates": 3
   }
 ]
