--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,34 +1,42 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_LS100",
+    "prefix": "minitaur_pop16k",
     "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 100",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_LS400",
-    "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 400",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 16384 -c survival_weight 10",
     "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_LS800",
+    "prefix": "minitaur_pop8k",
     "result_dir":"exp/log",
-    "walltime": "12:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 800",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 8192 -c survival_weight 10",
     "replicates": 3
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_LS400_H50",
+    "prefix": "minitaur_pop4k",
     "result_dir":"exp/log",
-    "walltime": "72:00",
-    "args": "-c horizon 50 -c popsize 2000 -c iterations 500 -c survival_weight 10 -c motor_velocity_limit 150 -c angle_limit 0.5 -c ensemble_hidden 400",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 4096 -c survival_weight 10",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_pop2k",
+    "result_dir":"exp/log",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 2048-c survival_weight 10",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_pop1k",
+    "result_dir":"exp/log",
+    "walltime": "6:00",
+    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 1024 -c survival_weight 10",
     "replicates": 3
   }
 ]
