--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,42 +1,10 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_pop16k",
+    "prefix": "minitaur_test",
     "result_dir":"exp/log",
     "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 16384 -c survival_weight 10",
-    "replicates": 3
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_pop8k",
-    "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 8192 -c survival_weight 10",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_pop4k",
-    "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 4096 -c survival_weight 10",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_pop2k",
-    "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 2048-c survival_weight 10",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_pop1k",
-    "result_dir":"exp/log",
-    "walltime": "6:00",
-    "args": "-c horizon 20 -c motor_velocity_limit 150 -c popsize 1024 -c survival_weight 10",
-    "replicates": 3
+    "args": "-c n_ensembles 1",
+    "replicates": 1
   }
 ]
