--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -4,7 +4,7 @@
     "prefix": "minitaur_H50",
     "result_dir":"exp/log",
     "walltime": "1:00",
-    "args": "-c horizon 50",
+    "args": "-c horizon 50 -c drift_weight 1 -c shake_weight 1",
     "replicates": 1
   },
   {
@@ -12,7 +12,7 @@
     "prefix": "minitaur_H25",
     "result_dir":"exp/log",
     "walltime": "1:00",
-    "args": "-c horizon 25",
+    "args": "-c horizon 25 -c drift_weight 1 -c shake_weight 1",
     "replicates": 1
   }
 ]
