--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -3,16 +3,16 @@
     "exp":"exp/minitaur_env_adaptation.py",
     "prefix": "minitaur_H50",
     "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c horizon 50 -c drift_weight 1 -c shake_weight 1",
+    "walltime": "2:00",
+    "args": "-c horizon 50 ",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
     "prefix": "minitaur_H25",
     "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c horizon 25 -c drift_weight 1 -c shake_weight 1",
+    "walltime": "2:00",
+    "args": "-c horizon 25",
     "replicates": 1
   }
 ]
