--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,18 +1,34 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_H50",
+    "prefix": "minitaur_shake",
     "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c horizon 50 ",
-    "replicates": 1
+    "walltime": "4:00",
+    "args": "-c shake_weight 1 -c iterations 200",
+    "replicates": 3
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_H25",
+    "prefix": "minitaur_drift",
     "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c horizon 25",
-    "replicates": 1
+    "walltime": "4:00",
+    "args": "-c drift_weight 1 -c iterations 200",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_survival",
+    "result_dir":"exp/log",
+    "walltime": "4:00",
+    "args": "-c survival_weight 1 -c iterations 200",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "minitaur_drift_shake",
+    "result_dir":"exp/log",
+    "walltime": "4:00",
+    "args": "-c drift_weight 1 -c shake_weight 1 -c iterations 200",
+    "replicates": 3
   }
 ]
