--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -3,24 +3,8 @@
     "exp":"exp/minitaur_env_adaptation.py",
     "prefix": "minitaur_survical",
     "result_dir":"exp/log",
-    "walltime": "4:00",
-    "args": "-c horizon 50 -c survival_weight 10",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_shake",
-    "result_dir":"exp/log",
-    "walltime": "4:00",
-    "args": "-c horizon 50 -c shake_weight 1",
-    "replicates": 3
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "minitaur_drift",
-    "result_dir":"exp/log",
-    "walltime": "4:00",
-    "args": "-c horizon 50 -c drift_weight 10",
-    "replicates": 3
+    "walltime": "0:30",
+    "args": "-c model_size 1",
+    "replicates": 1
   }
 ]
