--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,90 +1,82 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model0",
+    "prefix": "model0_50",
     "result_dir":"exp/log",
     "walltime": "0:30",
-    "args": "-c model_size 0",
+    "args": "-c model_size 0 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model1",
+    "prefix": "model1_50",
     "result_dir":"exp/log",
     "walltime": "0:30",
-    "args": "-c model_size 1",
+    "args": "-c model_size 1 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model2",
+    "prefix": "model2_50",
     "result_dir":"exp/log",
     "walltime": "0:30",
-    "args": "-c model_size 2",
+    "args": "-c model_size 2 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model3",
+    "prefix": "model3_50",
     "result_dir":"exp/log",
     "walltime": "0:30",
-    "args": "-c model_size 3",
+    "args": "-c model_size 3 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model4",
+    "prefix": "model4_50",
     "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c model_size 4",
+    "walltime": "0:30",
+    "args": "-c model_size 4 -c data_size 50",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model5",
+    "prefix": "model5_50",
     "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c model_size 5",
+    "walltime": "0:30",
+    "args": "-c model_size 5 -c data_size 50",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model6",
+    "prefix": "model6_50",
     "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c model_size 6",
+    "walltime": "0:30",
+    "args": "-c model_size 6 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model7",
+    "prefix": "model7_50",
     "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c model_size 7",
+    "walltime": "0:30",
+    "args": "-c model_size 7 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model8",
+    "prefix": "model8_50",
     "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c model_size 8",
+    "walltime": "0:30_50",
+    "args": "-c model_size 8 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model9",
+    "prefix": "model9_50",
     "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c model_size 9",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model10",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c model_size 10",
+    "walltime": "0:30",
+    "args": "-c model_size 9 -c data_size 50",
     "replicates": 1
   }
 ]
