--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,242 +1,242 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model0_100",
+    "prefix": "model_tan0_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 0 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 100",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model1_100",
+    "prefix": "model_tan1_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 1 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 100",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model2_100",
+    "prefix": "model_tan2_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 2 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 100",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model3_100",
+    "prefix": "model_tan3_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 3 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 100",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model4_100",
+    "prefix": "model_tan4_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 4 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 100",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model5_100",
+    "prefix": "model_tan5_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 5 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 100",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model6_100",
+    "prefix": "model_tan6_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 6 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 100",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model7_100",
+    "prefix": "model_tan7_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 7 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 100",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model8_100",
+    "prefix": "model_tan8_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 8 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 100",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model9_100",
+    "prefix": "model_tan9_100",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 9 -c data_size 100",
+    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 100",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model0_200",
+    "prefix": "model_tan0_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 0 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model1_200",
+    "prefix": "model_tan1_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 1 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model2_200",
+    "prefix": "model_tan2_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 2 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model3_200",
+    "prefix": "model_tan3_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 3 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model4_200",
+    "prefix": "model_tan4_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 4 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 200",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model5_200",
+    "prefix": "model_tan5_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 5 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 200",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model6_200",
+    "prefix": "model_tan6_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 6 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model7_200",
+    "prefix": "model_tan7_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 7 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model8_200",
+    "prefix": "model_tan8_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 8 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model9_200",
+    "prefix": "model_tan9_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 9 -c data_size 200",
+    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model0_50",
+    "prefix": "model_tan0_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 0 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model1_50",
+    "prefix": "model_tan1_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 1 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model2_50",
+    "prefix": "model_tan2_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 2 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model3_50",
+    "prefix": "model_tan3_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 3 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 50",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model4_50",
+    "prefix": "model_tan4_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 4 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 50",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model5_50",
+    "prefix": "model_tan5_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 5 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 50",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model6_50",
+    "prefix": "model_tan6_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 6 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model7_50",
+    "prefix": "model_tan7_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 7 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model8_50",
+    "prefix": "model_tan8_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 8 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 50",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model9_50",
+    "prefix": "model_tan9_50",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c model_size 9 -c data_size 50",
+    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 50",
     "replicates": 1
   }
 ]
